# PicoWaveDock

./: .gitignore  readme.md
circuit/: pico_wave_dock_v2.kicad_sch
open-source-silicon-magazine-vol2/: Cargo.toml
open-source-silicon-magazine-vol2/circuit/: pico_wave_dock_ishikai.kicad_sch
pio-dualcore-book/: Cargo.toml
pio-dualcore-book/src/: main.rs
wave_example/: Cargo.toml
wave_example/src/: gen_and_scope.rs  lib.rs  music.rs  play_music.rs  serial_control_sin.rs  tables.rs  ultrasound_and_spectrum.rs
wave_viewer/: Cargo.toml
wave_viewer/src/: args.rs  data.rs  decode.rs  fft_bin.rs  filter.rs  lib.rs  params.rs  plot.rs  reader.rs  scope.rs  speed.rs  viewer.rs
wave_viewer/src/dsp/: fft.rs
wave_viewer/src/viewer/: plot.rs  scope.rs  spectrum.rs
