[package]
name = "open-source-silicon-magazine-vol2"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7.7"
critical-section = "1.2.0"
embedded-hal = "1.0.0"
heapless = "0.9.2"
panic-halt = "1.0.0"
pio = "0.3.0"
rp235x-hal = { version = "0.4.0", features = ["critical-section-impl"] }
usb-device = "0.3.2"
usbd-serial = "0.2.2"